fix award spending label not aligning correctly

--- a/src/_scss/pages/covid19/spendingOverTime/_awardSpendingOverTime.scss
+++ b/src/_scss/pages/covid19/spendingOverTime/_awardSpendingOverTime.scss
@@ -29,6 +29,7 @@
                     }
                     .table-header__label {
                         width: 100%;
+                        text-align: inherit;
                     }
                 }
             }
